	* Added support for the 'CFG GPO' command to 'SyLwrpServer'.
	* Added 'SyRouter::gpoName()' and 'SyRouter::setGpoName()' methods.
	* Added 'SyRouter::gpoAddress()' and 'SyRouter::setGpoAddress()'
	methods.
2018-09-23 Fred Gleason <fredg@paravelsystems.com>
	* Added ' SyLwrpClientConnection::gpiAdded()',
	' SyLwrpClientConnection::addGpi()', 'SyLwrpClientConnection::delGpi()'
	' SyLwrpClientConnection::addGpo()' and
	' SyLwrpClientConnection::delGpo()' methods.
	* Added 'SyLwrpServer::sendGpiState()' and
	'SyLwrpServer::sendGpoState()' methods.
	* Added 'SyGpioEvent::sourceAddress()' and
	'SyGpioBundleEvent::sourceAddress()' methods.
	* Added support for the 'ADD GPI', 'ADD GPO', 'DEL GPI' and 'DEL GPO'
	command to 'SyLwrpServer'.
	* Removed the 'SyRouting::gpiState()' and 'SyRouting::gpoState()'
	methods.
	* Added 'SyRouting::setGpiBySlot()' and 'SyRouting::setGpoBySlot()'
	methods.
2018-09-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'SyLwrpServer::sendGpiState()' that failed to cache
	current GPI state.
	* Fixed a bug in 'SyLwrpServer::sendGpiState()' that caused a
	gratutious routing DB save every time GPO state was updated.
2018-10-13 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'SyGpioServer' that caused locally originated
	GPI events to be processed.
	* Added 'SyRouting::gpoMode()', 'SyRouting::setGpoMode()',
	'SyRouting::gpoSnakeSlot()' and 'SyRouting::setGpoSnakeSlot()'
	methods.
2018-10-14 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'SyLwrpServer::gpoCfgChanged()' signal.
2018-10-15 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library ABI version to 15:0:0.
	* Incremented the package version to 0.19.0.
2019-02-02 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'SyGpioServer::sendGpo()' method.
2019-02-06 Fred Gleason <fredg@paravelsystems.com>
	* Reverted change to 'SyGpioServer' on 2018-10-13 that suppressed
	reception of locally originated GPI events.
